# Encuesta_2026

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
analysis/notebooks/: 01-exploratorio.ipynb
analysis/scripts/: fetch_tally.py
survey/: formulario-en.md  formulario-es.md  metodologia.md
whitepaper/: borrador.md
